--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 joblib==0.14.1
-matplotlib @ file:///tmp/build/80754af9/matplotlib-base_1592846044287/work
+matplotlib==3.1.3
 mpi4py==3.0.3
 psutil==5.7.2
 PyYAML==5.3.1
